--- a/components/diagram-component/diagram-header-component/diagram-header.scss
+++ b/components/diagram-component/diagram-header-component/diagram-header.scss
@@ -79,17 +79,25 @@
     }
   }
 
-  &__mode {
+  .tool-section {
     position: absolute;
     left: 10px;
     top: 50%;
     transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__mode, &__tool-mode {
+    position: relative;
     width: 80px;
     border: none;
     outline: none;
     text-align: left;
     margin: 0px;
     padding: 0px;
+    margin-right: 10px;
 
     &:focus {
       ul {
@@ -108,9 +116,11 @@
       background-color: rgb(255, 255, 255);
       box-shadow: 1px 1px 4px 0px rgba(41, 39, 39, 0.2);
       border-radius: 2px;
+      height: 30px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      border-radius: 2px;
     }
 
     ul {
@@ -143,6 +153,14 @@
           cursor: pointer;
         }
       }
+    }
+  }
+
+  &__tool-mode {
+    width: 100px;
+    .text {
+      box-shadow: none;
+      border: 2px solid rgba(56, 56, 56, 0.212);
     }
   }
 }
