--- a/components/diagram-component/diagram-tool/diagram-tool.scss
+++ b/components/diagram-component/diagram-tool/diagram-tool.scss
@@ -4,9 +4,19 @@
     position: fixed;
     left: 5px;
     top: calc(50%);
-    transform: translateY(-50%);
-    background-color: #fff;
+    transform: translate(-70px, -50%);
     padding: 10px;
+    transition: .3s linear;
+    background: rgba(255, 255, 255, 1);
+    backdrop-filter: blur(20px);
+    border: 1px solid transparent;
+    // background-clip: padding-box;
+    box-sizing: border-box;
+    &.editable {
+        transform: translate(0px, -50%);
+        background: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(20px);
+    }
     ul {
         padding: 0px;
         li {
@@ -31,6 +41,24 @@
                     // box-shadow: inset 
                     // 2px 2px 10px rgba(92, 92, 92, 0.3),
                     // -2px -2px 10px #fff;
+                }
+            }
+            .shape-type {
+                $color-stuff: rgb(187, 186, 186);
+                display: flex;
+                height: 20px;
+                .stroke {
+                    width: 50%;
+                    box-sizing: border-box;
+                    border: 3px solid $color-stuff;
+                    border-radius: 0px 4px 4px 0px;
+                    border-left: 0px;
+                }
+                .shade {
+                    width: 50%;
+                    background: $color-stuff;
+                    border-radius: 4px 0px 0px 4px;
+                    border-left: 0px;
                 }
             }
         }
