--- a/components/diagram-component/diagram-tool/diagram-tool.scss
+++ b/components/diagram-component/diagram-tool/diagram-tool.scss
@@ -34,6 +34,10 @@
                 cursor: pointer;
                 border: 2px solid transparent;
                 margin: 2px 0;
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
                 &.active, &:hover {
                     background: rgba(0, 0, 0, 0.12);
                 }
