--- a/components/diagram-component/diagram-header-component/diagram-header.scss
+++ b/components/diagram-component/diagram-header-component/diagram-header.scss
@@ -4,10 +4,10 @@
 .diagram-header {
   $shadow: rgba(128, 128, 128, 0.15);
   grid-area: header;
-  background-color: #fff;
   box-shadow: 2px 2px 10px 0px $shadow;
   z-index: 2;
-  height: $header-size;
+  // height: $header-size;
+  height: 40px;
   border-bottom: 1px solid $shadow;
   top: 0;
   left: 0;
@@ -16,6 +16,8 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(20px);
 
   .settings {
     position: absolute;
@@ -39,10 +41,12 @@
     display: flex;
     position: absolute;
     right: 15px;
+    align-items: center;
 
     &__avatar {
       position: relative;
-      width: 30px;
+      width: 20px;
+      height: 30px;
       outline: none;
       padding: 0;
       border: none;
@@ -62,7 +66,8 @@
         border-radius: 50%;
         overflow: hidden;
         border: 2px solid #fff;
-        width: 40px;
+        width: 30px;
+        height: 30px;
         position: relative;
         height: 100%;
       }
