--- a/components/diagram-component/diagram-tool/diagram-tool.scss
+++ b/components/diagram-component/diagram-tool/diagram-tool.scss
@@ -19,6 +19,50 @@
         backdrop-filter: blur(20px);
         user-select: none;
     }
+    &.horizontal {
+        top: -80px;
+        left: 50%;
+        transform: translateX(-50%);
+        &.editable {
+            top: 39px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        $shadow: rgba(128, 128, 128, 0.15);
+        padding: 0px;
+        box-shadow: 2px 2px 10px 0px $shadow;
+        border-bottom: 1px solid $shadow;
+        background: #fff;
+        // position: relative;
+        &::before, &::after {
+            content: '';
+            position: absolute;
+            background: inherit;
+            height: 100%;
+            width: 60px;
+            top: 0px;
+            // box-shadow: 2px 2px 10px 0px $shadow;
+            border-bottom: 1px solid $shadow;
+            transform: skewX(45deg);
+            z-index: -1;
+        }
+        &::before {
+            left: -30px;
+        }
+        &::after {
+            right: -30px;
+            transform: skewX(-45deg);
+        }
+        ul {
+            display: flex;
+            li {
+                button {
+                    height: 35px;
+                    width: 35px;
+                }
+            }
+        }
+    }
     ul {
         padding: 0px;
         user-select: none;
