--- a/components/ui/select/select.scss
+++ b/components/ui/select/select.scss
@@ -1,44 +1,55 @@
 .v-select {
+  position: relative;
+  outline: none;
+  background: transparent;
+  border: 2px solid rgb(204, 204, 204);
+  padding: 5px 8px;
+  border-radius: 3px;
+  cursor: pointer;
+  text-align: left;
+
+  &:focus {
+    border: 2px solid rgb(0, 248, 227);
+
+    .v-select__list {
+      display: block;
+    }
+  }
+
+  span {
     position: relative;
-    outline: none;
-    background: transparent;
-    border: 2px solid rgb(204, 204, 204);
-    padding: 5px 8px;
+    display: block;
+    text-align: left;
+  }
+
+  &__list {
+    display: none;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    // background: #fff;
+    width: 100%;
+    left: 0;
+    top: 30px;
+    box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.4),
+      -1px -1px 2px rgba(128, 128, 128, 0.4);
     border-radius: 3px;
-    cursor: pointer;
-    &:focus {
-        border: 2px solid rgb(0, 248, 227);
-        .v-select__list {
-            display: block;
-        }
+    overflow: hidden;
+    // background: rgba(255, 255, 255, 0.8);
+    background: transparent;
+    backdrop-filter: blur(20px);
+    text-align: left;
+
+    li {
+      list-style: none;
+      padding: 4px 6px;
+      cursor: pointer;
+      background-color: #fff;
+      text-align: left;
+
+      &:hover {
+        background: rgb(231, 231, 231);
+      }
     }
-    span {
-        position: relative;
-        display: block;
-    }
-    &__list {
-        display: none;
-        position: absolute;
-        margin: 0px;
-        padding: 0px;
-        // background: #fff;
-        width: 100%;
-        left: 0;
-        top: 30px;
-        box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.4),
-        -1px -1px 2px rgba(128, 128, 128, 0.4);
-        border-radius: 3px;
-        overflow: hidden;
-        // background: rgba(255, 255, 255, 0.8);
-        background: transparent;
-        backdrop-filter: blur(20px);
-        li {
-            list-style: none;
-            padding: 4px 6px;
-            cursor: pointer;
-            &:hover {
-                background: rgb(231, 231, 231);
-            }
-        }
-    }
+  }
 }
