--- a/components/diagram-component/diagram-board.scss
+++ b/components/diagram-component/diagram-board.scss
@@ -89,3 +89,17 @@
 * {
   // user-select: none;
 }
+
+
+.drop-zone {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(151, 151, 151, 0.39);
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
