--- a/components/diagram-component/diagram-vars.scss
+++ b/components/diagram-component/diagram-vars.scss
@@ -1,1 +1,4 @@
 $header-size: 60px;
+$default-cursor: 'assets/images/cursor.svg';
+$hand-cursor: 'assets/images/hand.svg';
+$grab-cursor: 'assets/images/grab.svg';
