--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -6,6 +6,10 @@
   @switch-mode="switchMode($event)"
   @update-name="updateName($event)"
   @change-fill-mode="changeFillMode($event)" />
+  <shapes-list
+  :shapes="shapes"
+  @focus-to-shape="focusToShape($event)"
+  />
   <div @dragenter="onDragEnter($event)" @dragleave="onDragLeave()" ref="canvasWrapper" id="canvasWrapper">
     <svg 
     @click="onClick($event)"
@@ -34,6 +38,7 @@
       ref="mainGroup"
       id="mainGroup"
       :transform="`${matrixValue}`"
+      :transform-origin="transformOrigin"
       >
 
       
@@ -51,7 +56,7 @@
        {{ selectElementDimension.path }}
       </text> -->
 
-      
+
 
         <shapes-component
         :diagramMode="diagramMode"
@@ -60,6 +65,7 @@
         :shape="shape"
         :stagingShape="selectedElements.length == 1 ? selectedElements[0]._id : null"
         @select-element="selectElement($event)"
+        @mouse-down="mouseDownShapeFun($event)"
         @mouse-over="mouseOverShapeFun($event)"
         @mouse-out="mouseOutShapeFun($event)"
         @delete-element="deleteElement($event)"
@@ -89,11 +95,11 @@
         </text>
       </g>
     </svg>
-    <div @dragenter="onDragEnter($event)" v-if="dragOver" class="drop-zone">
+    <!-- <div @dragenter="onDragEnter($event)" v-if="dragOver" class="drop-zone">
       <div class="drop">
         drop zone
       </div>
-    </div>
+    </div> -->
   </div>
   <d-tool
   :diagramMode="diagramMode" 
