--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -8,7 +8,10 @@
   @change-fill-mode="changeFillMode($event)" />
   <shapes-list
   :shapes="shapes"
+  :selectedElement="selectedElementsIds"
   @focus-to-shape="focusToShape($event)"
+  :show="showShapesList"
+  @toggle-show="showShapesList=$event"
   />
   <div @dragenter="onDragEnter($event)" @dragleave="onDragLeave()" ref="canvasWrapper" id="canvasWrapper">
     <svg 
@@ -82,8 +85,9 @@
           width="6"
           @mousedown="startResizeFun()"
           @mouseup="stopResizeFun()"
+          @mouseout="stopResizeFun()"
           @mousemove="startResize($event, itm.type)"
-          :class="`resize-hand ${itm.type}`"
+          :class="`resize-hand ${itm.type} ${selectedElements[0].canMove ? 'can-move': ''}`"
           />
         </g>
         <text v-if="selectedTool && lastMousePosition" 
