--- a/components/diagram-component/diagram-tool/diagram-tool.scss
+++ b/components/diagram-component/diagram-tool/diagram-tool.scss
@@ -1,121 +1,164 @@
 @import "./../diagram-vars.scss";
 
 .diagram-tool {
-    position: fixed;
-    left: 5px;
-    top: calc(50%);
-    transform: translate(-70px, -50%);
-    padding: 10px;
-    transition: .3s linear;
-    background: rgba(255, 255, 255, 1);
+  position: fixed;
+  left: 5px;
+  top: calc(50%);
+  transform: translate(-70px, -50%);
+  padding: 10px;
+  transition: .3s linear;
+  background: rgba(255, 255, 255, 1);
+  backdrop-filter: blur(20px);
+  border: 1px solid transparent;
+  // background-clip: padding-box;
+  box-sizing: border-box;
+  user-select: none;
+
+  &.editable {
+    transform: translate(0px, -50%);
+    background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
-    border: 1px solid transparent;
-    // background-clip: padding-box;
-    box-sizing: border-box;
     user-select: none;
+  }
+
+  &.horizontal {
+    top: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+
     &.editable {
-        transform: translate(0px, -50%);
-        background: rgba(255, 255, 255, 0.5);
-        backdrop-filter: blur(20px);
-        user-select: none;
+      top: 39px;
+      left: 50%;
+      transform: translateX(-50%);
     }
-    &.horizontal {
-        top: -80px;
-        left: 50%;
-        transform: translateX(-50%);
-        &.editable {
-            top: 39px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        $shadow: rgba(128, 128, 128, 0.15);
-        padding: 0px;
-        box-shadow: 2px 2px 10px 0px $shadow;
-        border-bottom: 1px solid $shadow;
-        background: #fff;
-        // position: relative;
-        &::before, &::after {
-            content: '';
-            position: absolute;
-            background: inherit;
-            height: 100%;
-            width: 60px;
-            top: 0px;
-            // box-shadow: 2px 2px 10px 0px $shadow;
-            border-bottom: 1px solid $shadow;
-            transform: skewX(45deg);
-            z-index: -1;
-        }
-        &::before {
-            left: -30px;
-        }
-        &::after {
-            right: -30px;
-            transform: skewX(-45deg);
-        }
-        ul {
-            display: flex;
-            li {
-                button {
-                    height: 35px;
-                    width: 35px;
-                }
-            }
-        }
+
+    $shadow: rgba(128, 128, 128, 0.15);
+    padding: 0px;
+    box-shadow: 2px 2px 10px 0px $shadow;
+    border-bottom: 1px solid $shadow;
+    background: #fff;
+
+    // position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      background: inherit;
+      height: 100%;
+      width: 60px;
+      top: 0px;
+      // box-shadow: 2px 2px 10px 0px $shadow;
+      border-bottom: 1px solid $shadow;
+      transform: skewX(45deg);
+      z-index: -1;
     }
+
+    &::before {
+      left: -30px;
+    }
+
+    &::after {
+      right: -30px;
+      transform: skewX(-45deg);
+    }
+
     ul {
-        padding: 0px;
-        user-select: none;
-        li {
-            list-style: none;
-            user-select: none;
-            button {
-                height: 40px;
-                width: 40px;
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border: none;
-                outline: none;
-                background: transparent;
-                cursor: pointer;
-                user-select: none;
-                border: 2px solid transparent;
-                margin: 2px 0;
-                img {
-                    height: 100%;
-                    width: 100%;
-                    user-select: none;
-                }
-                &.active, &:hover {
-                    background: rgba(0, 0, 0, 0.12);
-                }
-                &.active {
-                    // box-shadow: inset 
-                    // 2px 2px 10px rgba(92, 92, 92, 0.3),
-                    // -2px -2px 10px #fff;
-                }
+      display: flex;
+
+      li {
+        button {
+          height: 35px;
+          width: 35px;
+
+          &:hover {
+            .label {
+              display: block;
             }
-            .shape-type {
-                $color-stuff: rgb(187, 186, 186);
-                display: flex;
-                height: 20px;
-                user-select: none;
-                .stroke {
-                    width: 50%;
-                    box-sizing: border-box;
-                    border: 3px solid $color-stuff;
-                    border-radius: 0px 4px 4px 0px;
-                    border-left: 0px;
-                }
-                .shade {
-                    width: 50%;
-                    background: $color-stuff;
-                    border-radius: 4px 0px 0px 4px;
-                    border-left: 0px;
-                }
-            }
+          }
+
+          .label {
+            transition: .3s;
+            position: absolute;
+            bottom: -30px;
+            left: 50%;
+            transform: translate(-50%, 0px);
+            display: none;
+            z-index: -1;
+            color: #000;
+            text-transform: uppercase;
+            font-weight: 400;
+            letter-spacing: 2px;
+            font-size: 12px;
+          }
         }
+      }
     }
+  }
+
+  ul {
+    padding: 0px;
+    user-select: none;
+
+    li {
+      list-style: none;
+      user-select: none;
+      position: relative;
+
+      button {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        outline: none;
+        background: transparent;
+        cursor: pointer;
+        user-select: none;
+        border: 2px solid transparent;
+        margin: 2px 0;
+        position: relative;
+
+        img {
+          height: 100%;
+          width: 100%;
+          user-select: none;
+        }
+
+        &.active,
+        &:hover {
+          background: rgba(0, 0, 0, 0.12);
+        }
+
+        &.active {
+          // box-shadow: inset 
+          // 2px 2px 10px rgba(92, 92, 92, 0.3),
+          // -2px -2px 10px #fff;
+        }
+      }
+
+      .shape-type {
+        $color-stuff: rgb(187, 186, 186);
+        display: flex;
+        height: 20px;
+        user-select: none;
+
+        .stroke {
+          width: 50%;
+          box-sizing: border-box;
+          border: 3px solid $color-stuff;
+          border-radius: 0px 4px 4px 0px;
+          border-left: 0px;
+        }
+
+        .shade {
+          width: 50%;
+          background: $color-stuff;
+          border-radius: 4px 0px 0px 4px;
+          border-left: 0px;
+        }
+      }
+    }
+  }
 }
