--- a/components/diagram-component/shapes-list/shapes-list.html
+++ b/components/diagram-component/shapes-list/shapes-list.html
@@ -1,17 +1,24 @@
-<div class="shapes-list" :style="`width: ${width}px; transform: translateX(-${show ? 0 : width}px);`">
+<div class="shapes-list" ref="shapeList" :style="`
+    width: ${width}px;
+    transform: translateX(-${show ? 0 : width}px);
+`">
   <div class="shapes-list__header">
     shapes
   </div>
   <input placeholder="search..." type="search" v-model="search" class="shapes-list__search">
   <div class="shapes-list__wrapper">
-    <div @click="focusToShape(item)" class="shapes-list__wrapper__item" v-for="(item, i) in listShape" :key="i">
+    <div @click="focusToShape(item)" :class="`
+    shapes-list__wrapper__item 
+    ${isSelected(item._id) ? 'shapes-list__wrapper__item--active' : ''}
+    `" v-for="(item, i) in listShape" :key="i"
+      @dblclick="editNameFun()">
       {{ item.name }}
     </div>
   </div>
 
-  <div @click="show = !show" class="shapes-list__show">
+  <div @click="toggleShow()" class="shapes-list__show">
+    <span>shapes</span>
     <img :src="require(`./../../../assets/icons/${show ? 'left' : 'right'}.svg`)">
-    <span>{{ show ? 'Hide' : 'Show' }}</span>
   </div>
 
   <div class="shapes-list__expand" @mousedown="mouseDown($event)" @mouseup="mouseUp($event)"
