--- a/components/diagram-component/shapes-list/shapes-list.scss
+++ b/components/diagram-component/shapes-list/shapes-list.scss
@@ -14,6 +14,12 @@
   }
 }
 
+.active {
+  color: #000;
+  cursor: pointer;
+  background: rgba(238, 238, 238, 0.5);
+}
+
 .shapes-list {
   position: fixed;
   left: 0px;
@@ -62,35 +68,54 @@
       text-overflow: ellipsis;
       border-bottom: 1px solid rgba(128, 128, 128, 0.1);
 
+      &--active {
+        @extend .active;
+      }
+
       &:hover {
-        color: #000;
-        cursor: pointer;
-        background: rgba(238, 238, 238, 0.5);
+        @extend .active;
       }
     }
   }
 
   &__show {
     position: absolute;
-    right: -40px;
-    background: #fff;
+    right: -65px;
     top: 50px;
-    padding: 10px;
-    border-radius: 0px 15px 15px 0px;
+    padding: 5px 10px;
     cursor: pointer;
     z-index: 1;
     display: flex;
     align-items: center;
     transition: 0s;
-    span {
-        display: none;
-        width: 40px;
-    }
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(20px);
+    transform: rotateZ(-90deg);
+
     &:hover {
-        right: -80px;
-        span {
-            display: block;
-        }
+      span {
+        color: #000000;
+      }
+    }
+
+    img {
+      transform: rotateZ(90deg);
+    }
+
+    span {
+      transition: .3s;
+      padding-right: 5px;
+      color: grey;
+      text-transform: uppercase;
+      font-size: 10px;
+      font-weight: 500;
+      letter-spacing: 2px;
+    }
+
+    &:hover {
+      span {
+        display: block;
+      }
     }
   }
 
