--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -1,4 +1,7 @@
 <div class="diagram-board">
+  <!-- <div style="position: fixed;top: 200px;left: 300px; z-index: 2;">
+    <button @click="saveImage()">save</button>
+  </div> -->
   <d-header
   :name="name"
   :fillMode="fillMode"
@@ -15,6 +18,7 @@
   />
   <div @dragenter="onDragEnter($event)" @dragleave="onDragLeave()" ref="canvasWrapper" id="canvasWrapper">
     <svg 
+    id="mainSvg"
     @click="onClick($event)"
     @mousedown="onMouseDown($event)"
     @mousemove="onMouseMove($event)"
@@ -59,22 +63,30 @@
        {{ selectElementDimension.path }}
       </text> -->
 
+        <path
+        v-for="(item, i) in getLinkPath"
+        :key="`link-path-${i}`"
+        fill="none"
+        stroke="#000"
+        :d="item"
+        />
 
 
         <shapes-component
         :diagramMode="diagramMode"
-        v-for="shape in shapes"
+        @link-shape="linkShape($event)"
+        v-for="(shape, i) in shapes"
         :key="shape._id"
         :shape="shape"
         :stagingShape="selectedElements.length == 1 ? selectedElements[0]._id : null"
         @select-element="selectElement($event)"
         @mouse-down="mouseDownShapeFun($event)"
-        @mouse-over="mouseOverShapeFun($event)"
+        @mouse-over="mouseOverShapeFun($event, i)"
         @mouse-out="mouseOutShapeFun($event)"
         @delete-element="deleteElement($event)"
         ></shapes-component>
 
-        <g v-if="selectedElements.length == 1 && selectElementDimension">
+        <g v-if="selectedElements.length == 1 && selectElementDimension && diagramMode == 1">
           <rect
           draggable="true"
           v-for="(itm, i) in selectElementDimension.dragPart"
@@ -112,8 +124,10 @@
   @change="updateSelectedTool($event)" 
   />
   <d-detail
-  v-if="selectedElements.length == 1"
+  v-if="selectedElements.length == 1 && diagramMode == 1"
   :data="selectedElements[0]"
+  :shapesName="elementNames"
+  @data-change="monitorData($event)"
   />
   <d-footer :scale="scale" @change-scale="updateScale($event)" />
 </div>
