--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -23,6 +23,7 @@
     @mousedown="onMouseDown($event)"
     @mousemove="onMouseMove($event)"
     @mouseup="onMouseUp($event)"
+    @mouseover="onMouseOver($event)"
     @mouseout="onMouseOut($event)"
     @contextmenu="contextMenu($event)"
     :class="`canvas ${mouseOverShape ? 'over-shape' : ''}`" 
