--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -66,7 +66,11 @@
   </div>
   <d-tool :diagramMode="diagramMode" :selected="selectedTool" :fillMode="fillMode"
     @change="updateSelectedTool($event)" />
-  <d-detail v-if="selectedElements.length == 1 && diagramMode == 1" :data.sync="selectedElements[0]"
-    :shapesName="elementNames" @data-change="monitorData($event)" @update-selected="updateSelected($event)" />
+  <d-detail 
+    v-if="selectedElements.length == 1 && diagramMode == 1"
+    :data.sync="selectedElements[0]"
+    :shapesName="elementNames" 
+    @data-change="monitorData($event)" 
+    @update-selected="updateSelected($event)" />
   <d-footer :scale="scale" @change-scale="updateScale($event)" />
 </div>
