--- a/components/diagram-component/diagram-detail/diagram-detail.scss
+++ b/components/diagram-component/diagram-detail/diagram-detail.scss
@@ -244,3 +244,29 @@ textarea {
   grid-template-columns: 1fr;
   padding: 0px 5px;
 }
+
+.linked-shapes {
+  padding: 0px 10px;
+  li {
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 0px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.295);
+    &:hover { background: rgba(202, 197, 197, 0.2); }
+    button {
+      cursor: pointer;
+      border: none;
+      outline: none;
+      border-radius: 50%;
+      height: 20px;
+      width: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: transparent;
+      &:hover {
+        background: rgb(228, 228, 228);
+      }
+    }
+  }
+}
