--- a/components/diagram-component/diagram-vars.scss
+++ b/components/diagram-component/diagram-vars.scss
@@ -1,4 +1,6 @@
 $header-size: 60px;
 $default-cursor: 'assets/images/cursor.svg';
+$rectangle-cursor: 'assets/images/rectangle-cursor.svg';
+$circle-cursor: 'assets/images/circle-cursor.svg';
 $hand-cursor: 'assets/images/hand.svg';
 $grab-cursor: 'assets/images/grab.svg';
