adding preview commit

--- a/components/diagram-component/diagram-board.scss
+++ b/components/diagram-component/diagram-board.scss
@@ -20,6 +20,9 @@
     &.line {
       cursor: crosshair !important;
     }
+    // &.pencil {
+    //   cursor: url('./../../#{$pencil-cursor}'), auto;
+    // }
   }
 
   .context-menu {
