--- a/components/diagram-component/diagram-vars.scss
+++ b/components/diagram-component/diagram-vars.scss
@@ -4,3 +4,4 @@ $rectangle-cursor: 'assets/images/rectangle-cursor.svg';
 $circle-cursor: 'assets/images/circle-cursor.svg';
 $hand-cursor: 'assets/images/hand.svg';
 $grab-cursor: 'assets/images/grab.svg';
+$pencil-cursor: 'assets/images/pencil-cursor.svg';
