--- a/components/diagram-component/diagram-board.html
+++ b/components/diagram-component/diagram-board.html
@@ -7,9 +7,11 @@
     @update-name="updateName($event)" @change-fill-mode="changeFillMode($event)" />
   <shapes-list :shapes="shapes" :selectedElement="selectedElementsIds" @focus-to-shape="focusToShape($event)"
     :show="showShapesList" @toggle-show="showShapesList=$event" />
-  <div 
+  
+    <div 
   ref="canvasWrapper" id="canvasWrapper">
     <svg id="mainSvg" 
+    :transform-origin="transformOrigin"
     @dragenter="onDragEnter($event)" 
     @dragleave="onDragLeave()"
     @click="onClick($event)"
@@ -28,22 +30,15 @@
        fill="transparent"
        class="bg-cross"
       :d="mousePos" /> -->
-      <g ref="mainGroup" id="mainGroup" :transform="`${matrixValue}`" :transform-origin="transformOrigin">
+      
+      <g ref="mainGroup" id="mainGroup" 
+      :transform="`${matrixValue}`" 
+      >
 
 
-        <!-- <path 
-      v-if="selectedElements.length == 1 && selectElementDimension"
-      :d="selectElementDimension.path"
-      fill="transparent"
-      stroke-width="1"
-      class="select-square"
-      />
-      <text
-      :x="selectElementDimension.x"
-      :y="selectElementDimension.y - 20"
-       >
-       {{ selectElementDimension.path }}
-      </text> -->
+        <!-- <text x="300" y="300">
+          {{diagramName}}
+        </text> -->
 
         <path v-for="(item, i) in getLinkPath" :key="`link-path-${i}`" fill="none" stroke="#000" :d="item" />
 
@@ -53,7 +48,8 @@
           :selectedTool="selectedTool"
           :diagramMode="diagramMode" @link-shape="linkShape($event)" v-for="(shape, i) in shapes"
           :key="shape._id" :shape="shape" :stagingShape="selectedElements.length == 1 ? selectedElements[0]._id : null"
-          @select-element="selectElement($event)" @mouse-down="mouseDownShapeFun($event)"
+          @select-element="selectElement($event)" 
+          @mouse-down="mouseDownShapeFun($event)"
           @mouse-over="mouseOverShapeFun($event, i)" @mouse-out="mouseOutShapeFun($event)"
           @delete-element="deleteElement($event)"></shapes-component>
 
@@ -63,6 +59,23 @@
             @mouseout="stopResizeFun()" @mousemove="startResize($event, itm.type)"
             :class="`resize-hand ${itm.type} ${selectedElements[0].canMove ? 'can-move': ''}`" />
         </g>
+
+        <!-- <g
+        V-if="showCursors">
+          <user-cursor
+          v-for="(item, i) in cursors"
+        :x="item.x"
+        :y="item.y"
+        :fill="item.fill"
+        :key="`key-shape-${i}`"
+        ></user-cursor>
+        </g> -->
+
+        <!-- <text 
+        v-if="!!lastMousePosition"
+        :x="lastMousePosition.clientX"
+        :y="lastMousePosition.clientY"
+        >{{ lastMousePosition.clientX }}</text> -->
 
       </g>
       <!-- <path v-if="!!getOldMousePosition" 
@@ -78,7 +91,7 @@
   <d-tool :diagramMode="diagramMode" :selected="selectedTool" :fillMode="fillMode"
     @change="updateSelectedTool($event)" />
   <d-detail 
-    v-if="deviceType !== 0"
+    v-if="(!!selectedElements.length && deviceType !== 0)"
     :data.sync="selectedElements"
     :shapesName="elementNames" 
     @data-change="monitorData($event)" 
