--- a/pages/board/_board/d/diagram.scss
+++ b/pages/board/_board/d/diagram.scss
@@ -4,3 +4,16 @@
   height: 100vh;
   text-align: center;
 }
+
+.work-under-construction {
+  position: fixed;
+  z-index: 10;
+  top: 30px;
+  right: -50px;
+  font-size: 12px;
+  background: red;
+  padding: 10px 60px;
+  color: #fff;
+  font-weight: 500;
+  transform: rotateZ(45deg);
+}
